Add a dMap test client